footer, update README

--- a/index.head.html
+++ b/index.head.html
@@ -8,6 +8,8 @@
 <div class="jumbotron">
   <h3>nimrod-env</h3>
   <p>Contact: michal@zielinscy.org.pl</p>
+  <p><a href="https://github.com/zielmicha/nimrod-env">
+      https://github.com/zielmicha/nimrod-env</a></p>
   <h3>Use</h3>
 <pre>
 curl -f https://atomshare.net/nimrod/env.sh > env.sh && chmod +x env.sh
